<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="@dimen/dialog_width"
              android:layout_height="@dimen/dialog_height"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_scroll_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_dialog_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:textSize="@dimen/edit_text_size"
                android:inputType="text"
                android:maxLength="60"
                android:ems="28"
                android:maxEms="2"
                android:hint="@string/user_name"/>

            <EditText
                android:id="@+id/user_dialog_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:textSize="@dimen/edit_text_size"
                android:inputType="textMultiLine"
                android:maxLength="60"
                android:hint="@string/user_description"/>

            <EditText
                android:id="@+id/user_dialog_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:textSize="@dimen/edit_text_size"
                android:inputType="textMultiLine"
                android:hint="@string/user_note"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/user_dialog_delete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/user_delete"
            android:textColor="@android:color/black"
            android:textStyle="italic"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"/>

        <Button
            android:id="@+id/user_dialog_save"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/user_save"
            android:textColor="@android:color/black"
            android:textStyle="italic"/>

    </LinearLayout>

</LinearLayout>