<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="@dimen/dialog_width"
              android:layout_height="@dimen/dialog_height"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="@dimen/dialog_scroll_width"
        android:layout_height="@dimen/dialog_scroll_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/note_dialog_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorItemName"
                android:textStyle="bold"
                android:paddingTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                tools:text="Technique"/>

            <TextView
                android:id="@+id/note_dialog_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorItemDescription"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                tools:text="Description"/>

            <EditText
                android:id="@+id/note_dialog_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:textSize="@dimen/edit_text_size"
                android:inputType="textMultiLine"
                android:hint="@string/user_note"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/note_dialog_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/user_clear"
            android:textColor="@android:color/black"
            android:textStyle="italic"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"/>

        <Button
            android:id="@+id/note_dialog_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/user_save"
            android:textColor="@android:color/black"
            android:textStyle="italic"/>

    </LinearLayout>


</LinearLayout>